# bitpuppy

./: CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: release.yml
src/: bitey.rs  main.c  main.cpp
