[package]
name = "bitey"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.4"
tempfile = "3"
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[[bin]]
name = "bitey"
path = "src/bitey.rs"
